# transferable-acoustic-sensing

./: .gitignore  README.md  pyproject.toml  run_mlfow.sh
analysis_data/: affine_transformations_results.parquet  finger_scaling_laws.parquet  test_results_regression_min-max.json  test_results_regression_no_norm.json  test_results_regression_z-score.json
data/20251207_with_stand_sweep_regression_finger_032/: sensor_model.pkl
src/: create_plots.py  datamodule.py  datasets.py  evaluation.py  explore_automl.py  finger_scaling_laws.py  fit_affine_transforms.py  losses.py  main.py  models.py  morphembed.py  preprocessing.py  utils.py
src/conf/: config.yaml
src/conf/data/: fourier.yaml  raw.yaml  stft.yaml
src/conf/datasets/: finger_029_classification.yaml  finger_029_classification_combined.yaml  finger_029_classification_no_stand.yaml  finger_030_classification.yaml  finger_030_classification_combined.yaml  finger_030_classification_no_stand.yaml  finger_030_regression.yaml  finger_030_regression_new.yaml  finger_030_unlabeled.yaml  finger_032_classification.yaml  finger_032_classification_combined.yaml  finger_032_classification_no_stand.yaml  finger_032_regression.yaml  finger_032_regression_new.yaml  finger_032_unlabeled.yaml  finger_035_regression.yaml  finger_035_regression_new.yaml  finger_035_unlabeled.yaml  finger_037_regression.yaml  finger_037_regression_new.yaml  finger_037_unlabeled.yaml
src/conf/experiment/: min-max_normalisation.yaml  no_normalisation.yaml  z-score_normalisation.yaml
src/conf/model/: identity_model.yaml  mlp.yaml
temp/: README.md
(+3 files in other folders)
