[project]
name = "morphembed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "flaml[automl]>=2.5.0",
    "hydra-core>=1.3.2",
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "lightning[extra]>=2.6.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.8.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pot>=0.9.6.post1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
]

[tool.ruff]
src = ["src"]
[tool.pyright]
include = ["src"]
executionEnvironments = [
  { root = "src" }
]
